git commit -m "Final touch improvements."

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Mini_Project)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Mini_Project main.cpp CMax3SatProblem.cpp CMax3SatProblem.h CGAOptimizer.h CGAIndividual.h Problem.h)
+add_executable(Mini_Project main.cpp CMax3SatProblem.cpp CMax3SatProblem.h CGAOptimizer.h CGAIndividual.h Problem.h CGAOptimizer.cpp CGAIndividual.cpp)
